azureps-cmdlets-docs/ResourceManager/AzureRM.Sql/v1.0/CmdletMDs/AzureRM.Sql.md
---
Module Name: AzureRM.Sql
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link: {{Please enter FwLink manually}}
Help Version: {{Please enter version of help manually (X.X.X.X) format}}
Locale: en-US
---

# AzureRM.Sql Module
## Description
This topic displays help topics for the Azure SQL Database Cmdlets. 

## AzureRM.Sql Cmdlets
### [Get-AzureRmSqlCapability](Get-AzureRmSqlCapability.md)
Gets nextref_database capabilities for the current subscription.


### [Get-AzureRmSqlDatabaseActivity](Get-AzureRmSqlDatabaseActivity.md)
Gets the status of moving elastic databases.

### [Get-AzureRmSqlDatabaseAuditingPolicy](Get-AzureRmSqlDatabaseAuditingPolicy.md)
Gets the auditing policy of a database.


### [Get-AzureRmSqlDatabaseBackupLongTermRetentionPolicy](Get-AzureRmSqlDatabaseBackupLongTermRetentionPolicy.md)
Gets a database long term retention policy.


### [Get-AzureRmSqlDatabaseDataMaskingPolicy](Get-AzureRmSqlDatabaseDataMaskingPolicy.md)
Gets the data masking policy for a database.


### [Get-AzureRmSqlDatabaseDataMaskingRule](Get-AzureRmSqlDatabaseDataMaskingRule.md)
Gets the data masking rules from a database.


### [Get-AzureRmSqlDatabaseExpanded](Get-AzureRmSqlDatabaseExpanded.md)
Gets a database and its expanded property values.

### [Get-AzureRMSqlDatabaseGeoBackup](Get-AzureRMSqlDatabaseGeoBackup.md)
Gets a geo-redundant backup of a database.


### [Get-AzureRmSqlDatabaseImportExportStatus](Get-AzureRmSqlDatabaseImportExportStatus.md)
Gets the details of an import or export of an ssSDS.


### [Get-AzureRmSqlDatabaseIndexRecommendations](Get-AzureRmSqlDatabaseIndexRecommendations.md)
Gets the recommended index operations for a server or database.

### [Get-AzureRmSqlDatabaseReplicationLink](Get-AzureRmSqlDatabaseReplicationLink.md)
Gets the geo-replication links between an ssSDS and a resource group or ssNoVersion.


### [Get-AzureRmSqlDatabaseRestorePoints](Get-AzureRmSqlDatabaseRestorePoints.md)
Retrieves the distinct restore points from which a SQL Data Warehouse can be restored.


### [Get-AzureRmSqlDatabaseSecureConnectionPolicy](Get-AzureRmSqlDatabaseSecureConnectionPolicy.md)
Gets the secure connection policy for a database.


### [Get-AzureRmSqlDatabaseThreatDetectionPolicy](Get-AzureRmSqlDatabaseThreatDetectionPolicy.md)
Gets the threat detection policy for a database.


### [Get-AzureRmSqlDatabaseTransparentDataEncryptionActivity](Get-AzureRmSqlDatabaseTransparentDataEncryptionActivity.md)
Gets the progress of a TDE scan of a database.


### [Get-AzureRmSqlDatabaseTransparentDataEncryption](Get-AzureRmSqlDatabaseTransparentDataEncryption.md)
Gets the TDE state for a database.


### [Get-AzureRmSqlDatabaseUpgradeHint](Get-AzureRmSqlDatabaseUpgradeHint.md)
Gets pricing tier hints for a database.


### [Get-AzureRmSqlDatabase](Get-AzureRmSqlDatabase.md)
Gets one or more databases.


### [Get-AzureRMSqlDeletedDatabaseBackup](Get-AzureRMSqlDeletedDatabaseBackup.md)
Gets a deleted database that you can restore.


### [Get-AzureRmSqlElasticPoolActivity](Get-AzureRmSqlElasticPoolActivity.md)
Gets the status of operations on an elastic pool.

### [Get-AzureRmSqlElasticPoolDatabase](Get-AzureRmSqlElasticPoolDatabase.md)
Gets elastic databases in an elastic pool and their property values.


### [Get-AzureRmSqlElasticPoolRecommendation](Get-AzureRmSqlElasticPoolRecommendation.md)
Gets elastic pool recommendations.

### [Get-AzureRmSqlElasticPool](Get-AzureRmSqlElasticPool.md)
Gets elastic pools and their property values in an ssSDS.


### [Get-AzureRmSqlServerActiveDirectoryAdministrator](Get-AzureRmSqlServerActiveDirectoryAdministrator.md)
Gets information about an azure_2 AD administrator for SQL Server.

### [Get-AzureRmSqlServerAuditingPolicy](Get-AzureRmSqlServerAuditingPolicy.md)
Gets the auditing policy of a SQL server.


### [Get-AzureRmSqlServerBackupLongTermRetentionVault](Get-AzureRmSqlServerBackupLongTermRetentionVault.md)
Gets a server long term retention vault.


### [Get-AzureRmSqlServerCommunicationLink](Get-AzureRmSqlServerCommunicationLink.md)
Gets communication links for elastic database transactions between database servers.


### [Get-AzureRmSqlServerDisasterRecoveryConfigurationActivity](Get-AzureRmSqlServerDisasterRecoveryConfigurationActivity.md)
Gets activity for a database server system recovery configuration.


### [Get-AzureRmSqlServerDisasterRecoveryConfiguration](Get-AzureRmSqlServerDisasterRecoveryConfiguration.md)
Gets a database server system recovery configuration.


### [Get-AzureRmSqlServerFirewallRule](Get-AzureRmSqlServerFirewallRule.md)
Gets firewall rules for a nextref_database server.

### [Get-AzureRmSqlServerServiceObjective](Get-AzureRmSqlServerServiceObjective.md)
Gets service objectives for an ssSDS server.

### [Get-AzureRmSqlServerUpgradeHint](Get-AzureRmSqlServerUpgradeHint.md)
Gets pricing tier hints for upgrading an ssSDS server.


### [Get-AzureRmSqlServerUpgrade](Get-AzureRmSqlServerUpgrade.md)
Gets the status of an ssSDS server upgrade.


### [Get-AzureRmSqlServer](Get-AzureRmSqlServer.md)
Returns information about SQL Database servers.


### [New-AzureRmSqlDatabaseCopy](New-AzureRmSqlDatabaseCopy.md)
Creates a copy of a nextref_database that uses the snapshot at the current time.


### [New-AzureRmSqlDatabaseDataMaskingRule](New-AzureRmSqlDatabaseDataMaskingRule.md)
Creates a data masking rule for a database.


### [New-AzureRmSqlDatabaseExport](New-AzureRmSqlDatabaseExport.md)
Exports an ssSDS as a .bacpac file to a storage account.


### [New-AzureRmSqlDatabaseImport](New-AzureRmSqlDatabaseImport.md)
Imports a .bacpac file and create a new database on the server.


### [New-AzureRmSqlDatabaseSecondary](New-AzureRmSqlDatabaseSecondary.md)
Creates a secondary database for an existing database and starts data replication.


### [New-AzureRmSqlDatabase](New-AzureRmSqlDatabase.md)
Creates a database or an elastic database.


### [New-AzureRmSqlElasticPool](New-AzureRmSqlElasticPool.md)
Creates an elastic database pool for a nextref_database.


### [New-AzureRmSqlServerCommunicationLink](New-AzureRmSqlServerCommunicationLink.md)
Creates a communication link for elastic database transactions between two nextref_database servers.


### [New-AzureRmSqlServerDisasterRecoveryConfiguration](New-AzureRmSqlServerDisasterRecoveryConfiguration.md)
Creates a database server system recovery configuration.


### [New-AzureRmSqlServerFirewallRule](New-AzureRmSqlServerFirewallRule.md)
Creates a firewall rule for a nextref_database server.


### [New-AzureRmSqlServer](New-AzureRmSqlServer.md)
Creates a nextref_database server.


### [Remove-AzureRmSqlDatabaseAuditing](Remove-AzureRmSqlDatabaseAuditing.md)
Removes the auditing of a database.


### [Remove-AzureRmSqlDatabaseDataMaskingRule](Remove-AzureRmSqlDatabaseDataMaskingRule.md)
Removes a data masking rule from a database.


### [Remove-AzureRmSqlDatabaseSecondary](Remove-AzureRmSqlDatabaseSecondary.md)
Terminates data replication between a nextref_database and the specified secondary database.


### [Remove-AzureRmSqlDatabaseThreatDetectionPolicy](Remove-AzureRmSqlDatabaseThreatDetectionPolicy.md)
Removes the threat detection policy from a database.


### [Remove-AzureRmSqlDatabase](Remove-AzureRmSqlDatabase.md)
Removes an azure_2 SQL database.


### [Remove-AzureRmSqlElasticPool](Remove-AzureRmSqlElasticPool.md)
Deletes an elastic database pool.


### [Remove-AzureRmSqlServerActiveDirectoryAdministrator](Remove-AzureRmSqlServerActiveDirectoryAdministrator.md)
Removes an azure_2 AD administrator for SQL Server.


### [Remove-AzureRmSqlServerAuditing](Remove-AzureRmSqlServerAuditing.md)
Removes the auditing of a SQL server.


### [Remove-AzureRmSqlServerCommunicationLink](Remove-AzureRmSqlServerCommunicationLink.md)
Deletes a communication link for elastic database transactions between two servers.


### [Remove-AzureRmSqlServerDisasterRecoveryConfiguration](Remove-AzureRmSqlServerDisasterRecoveryConfiguration.md)
Removes a SQL database server system recovery configuration.


### [Remove-AzureRmSqlServerFirewallRule](Remove-AzureRmSqlServerFirewallRule.md)
Deletes a firewall rule from a nextref_database server.


### [Remove-AzureRmSqlDatabaseThreatDetectionPolicy](Remove-AzureRmSqlDatabaseThreatDetectionPolicy.md)
Removes the threat detection policy from a database.


### [Remove-AzureRmSqlServer](Remove-AzureRmSqlServer.md)
Removes an azure_2 SQL Database server.


### [Restore-AzureRmSqlDatabase](Restore-AzureRmSqlDatabase.md)
Restores a SQL database.


### [Resume-AzureRmSqlDatabase](Resume-AzureRmSqlDatabase.md)
Resumes a SQL Data Warehouse database.

### [Set-AzureRmSqlDatabaseAuditingPolicy](Set-AzureRmSqlDatabaseAuditingPolicy.md)
Sets the auditing policy for a database.


### [Set-AzureRmSqlDatabaseBackupLongTermRetentionPolicy](Set-AzureRmSqlDatabaseBackupLongTermRetentionPolicy.md)
Sets a server long term retention policy.


### [Set-AzureRmSqlDatabaseDataMaskingPolicy](Set-AzureRmSqlDatabaseDataMaskingPolicy.md)
Sets data masking for a database.


### [Set-AzureRmSqlDatabaseDataMaskingRule](Set-AzureRmSqlDatabaseDataMaskingRule.md)
Sets the properties of a data masking rule for a database.

### [Set-AzureRmSqlDatabaseSecondary](Set-AzureRmSqlDatabaseSecondary.md)
Switches a secondary database to be primary in order to initiate failover.


### [Set-AzureRmSqlDatabaseThreatDetectionPolicy](Set-AzureRmSqlDatabaseThreatDetectionPolicy.md)
Sets a threat detection policy on a database.


### [Set-AzureRmSqlDatabaseTransparentDataEncryption](Set-AzureRmSqlDatabaseTransparentDataEncryption.md)
Modifies TDE property for a database.


### [Set-AzureRmSqlDatabase](Set-AzureRmSqlDatabase.md)
Sets properties for a database, or moves an existing database into an elastic pool.

### [Set-AzureRmSqlElasticPool](Set-AzureRmSqlElasticPool.md)
Modifies properties of an elastic database pool in a nextref_database.


### [Set-AzureRmSqlServerActiveDirectoryAdministrator](Set-AzureRmSqlServerActiveDirectoryAdministrator.md)
Provisions an azure_2 AD administrator for SQL Server.

### [Set-AzureRmSqlServerAuditingPolicy](Set-AzureRmSqlServerAuditingPolicy.md)
Changes the auditing policy of a nextref_database server.


### [Set-AzureRmSqlServerBackupLongTermRetentionVault](Set-AzureRmSqlServerBackupLongTermRetentionVault.md)
Sets a server long term retention vault.


### [Set-AzureRmSqlServerDisasterRecoveryConfiguration](Set-AzureRmSqlServerDisasterRecoveryConfiguration.md)
Modifies a database server recovery configuration.


### [Set-AzureRmSqlServerFirewallRule](Set-AzureRmSqlServerFirewallRule.md)
Modifies a firewall rule in ssSDS server.

### [Set-AzureRmSqlServer](Set-AzureRmSqlServer.md)
Modifies properties of a nextref_database server.


### [Start-AzureRmSqlDatabaseExecuteIndexRecommendation](Start-AzureRmSqlDatabaseExecuteIndexRecommendation.md)
Starts the workflow that runs a recommended index operation.


### [Start-AzureRmSqlServerUpgrade](Start-AzureRmSqlServerUpgrade.md)
Starts the upgrade of a nextref_database server.


### [Stop-AzureRmSqlDatabaseExecuteIndexRecommendation](Stop-AzureRmSqlDatabaseExecuteIndexRecommendation.md)
Stops the workflow that runs a recommended index operation.


### [Stop-AzureRmSqlServerUpgrade](Stop-AzureRmSqlServerUpgrade.md)
Stops the upgrade of a nextref_database server.


### [Suspend-AzureRmSqlDatabase](Suspend-AzureRmSqlDatabase.md)
Suspends a SQL Data Warehouse database.


### [Use-AzureRmSqlServerAuditingPolicy](Use-AzureRmSqlServerAuditingPolicy.md)
Specifies that a database uses the auditing policy of its host server.



